blog_posts_app/k8s-configs/production/ingress/backend-posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-posts-ingress
  namespace: production
spec:
  tls:
    - secretName: backend-production-posts-com-tls
      hosts:
        - backend.blog-posts.com
  rules:
  - host: backend.blog-posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 80
  ingressClassName: traefik
